--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.13'
+    testCompile 'junit:junit:4.13'
+    compile 'junit:junit:4.13'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
 }
