--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,7 @@ jobs:
     working_directory: ~/project
     steps:
       - checkout
-      - run:
-          name: Some command
-          command: cd ..
+      - katalon-studio/run:
+          version: latest
       - store_artifacts:
           path: ~/project/resources
