--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,13 @@ jobs:
     working_directory: ~/project
     steps:
       - checkout
-      - run:
-          name: Some command
-          command: ls
-      - katalon-studio/run:
-          version: latest
+      - android/create-avd:
+          avd-name: flutter
+          install: true
+          system-image: system-images;android-29;default;x86
+      - android/start-emulator:
+          avd-name: Android-Emulator
+          #post-emulator-launch-assemble-command: 'flutter build apk --debug'
+          restore-gradle-cache-find-args: ./android -name 'build.gradle'
       - store_artifacts:
           path: ~/project/resources
