--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,5 +19,21 @@ jobs:
           system-image: system-images;android-29;default;x86
       - android/start-emulator:
           avd-name: Android-Emulator
+      - run:
+          name: Install Appium
+          command: npm install appium@1.14.0
+      - run:
+          name: Start Appium
+          command: cd ; appium
+          background: true
+      - run:
+          name: Wait Until Appium Boot
+          command: sleep 30
+      - run:
+          name: Install APK
+          command: adb install ~/project/resources/apk/app.apk
+      - run:
+          name: Run Tests
+          command: ls
       - store_artifacts:
           path: ~/project/resources
