--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 
 orbs:
+  flutter-orb: circleci/flutter@1.0.1
   android: circleci/android@2.0.0
   katalon-studio: katalon/katalon-studio@23.0.11
 
@@ -13,6 +14,9 @@ jobs:
     working_directory: ~/project
     steps:
       - checkout
+      - flutter-orb/install_sdk_and_pub:
+          cache-version: machine
+          flutter_version: 2.10.3
       - android/create-avd:
           avd-name: Android-Emulator
           install: true
