--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,6 @@ sonarqube {
 group 'br.com.qalenium'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
-
 repositories {
     mavenCentral()
 }
@@ -29,10 +27,5 @@ dependencies {
     implementation group: 'com.github.genium-framework', name: 'Appium-Support', version: '1.0.5'
 }
 
-sourceSets {
-    main {
-        java {
-            srcDir 'src'
-        }
-    }
+assembleDebugAndroidTest {
 }
