--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
           system-image: system-images;android-29;default;x86
       - android/start-emulator:
           avd-name: Android-Emulator
+          post-emulator-launch-assemble-command: 'ls'
       - run:
           name: Install APK
           command: adb install ~/project/resources/apk/app.apk
