--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,10 +30,10 @@ jobs:
           system-image: system-images;android-29;default;x86
       - android/start-emulator:
           avd-name: Android-Emulator
-          post-emulator-launch-assemble-command: 'ls'
+          post-emulator-launch-assemble-command: 'ls' #workaround to not run androidAssembleDebugTest task
       - run:
           name: Install APK
-          command: adb install ~/project/resources/apk/app.apk
+          command: adb install ~/project/resources/apk/app-debug.apk
       - run:
           name: Run Tests
           command: ls
