--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,6 @@
 version: 2.1
 
 orbs:
-  flutter-orb: circleci/flutter@1.0.1
   android: circleci/android@2.0.0
   katalon-studio: katalon/katalon-studio@23.0.11
 
@@ -21,9 +20,6 @@ jobs:
           name: Start Appium
           command: cd ; appium
           background: true
-      - run:
-         name: Wait Until Appium Boot
-         command: sleep 30
       - android/create-avd:
           avd-name: Android-Emulator
           install: true
@@ -32,8 +28,11 @@ jobs:
           avd-name: Android-Emulator
           post-emulator-launch-assemble-command: 'ls' #workaround to not run androidAssembleDebugTest task
       - run:
+          name: Download apk
+          command: cd ~/project/resources/apk && { curl -0 https://output.circle-artifacts.com/output/job/dfc28f74-49d4-4073-91cc-a0411a34e1a1/artifacts/0/~/project/build/app/outputs/flutter-apk/app.apk ; cd -; }
+      - run:
           name: Install APK
-          command: adb install ~/project/resources/apk/app-debug.apk
+          command: adb install ~/project/resources/apk/app.apk
       - run:
           name: Run Tests
           command: ls
