--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       tag: 2022.03.1
     working_directory: ~/project
     steps:
-#      - checkout
+      - checkout
 #      - run:
 #          name: Install Appium
 #          command: npm install -g appium
