--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,28 +13,28 @@ jobs:
     working_directory: ~/project
     steps:
       - checkout
-#      - run:
-#          name: Install Appium
-#          command: npm install -g appium
-#      - run:
-#          name: Start Appium
-#          command: cd ; appium
-#          background: true
-#      - android/create-avd:
-#         avd-name: Android-Emulator
-#          install: true
-#          system-image: system-images;android-29;default;x86
-#      - android/start-emulator:
-#          avd-name: Android-Emulator
-#          post-emulator-launch-assemble-command: 'ls' #workaround to not run androidAssembleDebugTest task
+      - run:
+          name: Install Appium
+          command: npm install -g appium
+      - run:
+          name: Start Appium
+          command: cd ; appium
+          background: true
+      - android/create-avd:
+          avd-name: Android-Emulator
+          install: true
+          system-image: system-images;android-29;default;x86
+      - android/start-emulator:
+          avd-name: Android-Emulator
+          post-emulator-launch-assemble-command: 'ls' #workaround to not run androidAssembleDebugTest task
       - run:
           name: Download apk
-          command: 'cd ~/project/resources/apk && { curl -0 https://output.circle-artifacts.com/output/job/dfc28f74-49d4-4073-91cc-a0411a34e1a1/artifacts/0/~/project/build/app/outputs/flutter-apk/app.apk ; cd -; }'
-#      - run:
-#          name: Install APK
-#          command: adb install ~/project/resources/apk/app.apk
-#      - run:
-#          name: Run Tests
-#          command: ls
+          command: 'cd ~/project/resources/apk && { curl -0 https://output.circle-artifacts.com/output/job/f1cac3d8-3d03-44e0-b642-b199730e44bb/artifacts/0/~/project/build/app/outputs/flutter-apk/app.apk ; cd -; }'
+      - run:
+          name: Install APK
+          command: adb install ~/project/resources/apk/app.apk
+      - run:
+          name: Run Tests
+          command: ls
       - store_artifacts:
           path: ~/project/resources
