--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           post-emulator-launch-assemble-command: 'ls' #workaround to not run androidAssembleDebugTest task
       - run:
           name: Download apk
-          command: 'cd ~/project/resources/apk && { curl -O https://output.circle-artifacts.com/output/job/f1cac3d8-3d03-44e0-b642-b199730e44bb/artifacts/0/~/project/build/app/outputs/flutter-apk/app.apk ; cd -; }'
+          command: 'cd ~/project/resources/apk && { curl -L -O https://output.circle-artifacts.com/output/job/f1cac3d8-3d03-44e0-b642-b199730e44bb/artifacts/0/~/project/build/app/outputs/flutter-apk/app.apk ; cd -; }'
       - run:
           name: Install APK
           command: adb install ~/project/resources/apk/app.apk
