--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,12 +29,12 @@ jobs:
           post-emulator-launch-assemble-command: 'ls' #workaround to not run androidAssembleDebugTest task
       - run:
           name: Download apk
-          command: 'cd ~/project/resources/apk && { curl -L -O https://output.circle-artifacts.com/output/job/acb4a6fe-51cb-4bcc-976c-f9a2c047ea6e/artifacts/0/~/project/build/app/outputs/flutter-apk/app-debug.apk ; cd -; }'
+          command: cd ~/project/resources/apk && { curl -L -O https://output.circle-artifacts.com/output/job/acb4a6fe-51cb-4bcc-976c-f9a2c047ea6e/artifacts/0/~/project/build/app/outputs/flutter-apk/app-debug.apk ; cd -; }
       - run:
           name: Install APK
           command: adb install ~/project/resources/apk/app-debug.apk
       - run:
           name: Run Tests
-          command: ls
+          command: java -cp .:/usr/share/java/junit.jar org.junit.runner.JUnitCore MobileTest
       - store_artifacts:
           path: ~/project/resources
