--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - checkout
       - run:
           name: Generate jar
-          command: jar cf QAlenium.jar Play.java
+          command: jar cf QAlenium.jar ~/project/src/main/java/execution/Play.java
       - run:
           name: Run Tests
           command: java -jar QAlenium.jar
