--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,11 @@ dependencies {
     implementation group: 'io.appium', name: 'java-client', version: '8.0.0'
     implementation group: 'com.github.genium-framework', name: 'Appium-Support', version: '1.0.5'
 }
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'br.com.qalenium.execution.Play'
+        )
+    }
+}
