--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@ version: 2.1
 
 orbs:
   android: circleci/android@2.0.0
+  # refer to this link to setup slack channels: https://github.com/CircleCI-Public/slack-orb/wiki/Setup
+  slack: circleci/slack@4.9.3
 
 jobs:
   build:
@@ -37,6 +39,10 @@ jobs:
           command: ./gradlew runTests
       - store_artifacts:
           path: ~/project/resources
+      - slack/notify:
+          event: always
+          template: basic_success_1
+
 
 workflows:
   build_and_test:
