--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,8 @@ jobs:
     working_directory: ~/project
     steps:
       - checkout
+  appium_server:
+    steps:
       - run:
           name: Install Appium
           command: npm install -g appium
@@ -22,6 +24,8 @@ jobs:
           name: Start Appium
           command: cd ; appium
           background: true
+  android_emulator:
+    steps:
       - android/create-avd:
           avd-name: Android-Emulator
           install: true
@@ -29,24 +33,29 @@ jobs:
       - android/start-emulator:
           avd-name: Android-Emulator
           post-emulator-launch-assemble-command: 'ls' #workaround to not run androidAssembleDebugTest task
+  manage_apk:
+    steps:
       - run:
           name: Download apk
           command: cd ~/project/resources/apk && { curl -L -O https://output.circle-artifacts.com/output/job/acb4a6fe-51cb-4bcc-976c-f9a2c047ea6e/artifacts/0/~/project/build/app/outputs/flutter-apk/app-debug.apk ; cd -; }
       - run:
           name: Install APK
           command: adb install ~/project/resources/apk/app-debug.apk
+  android_testing:
+    steps:
       - run:
           name: Run Tests
           command: ./gradlew runTests
       - store_artifacts:
           path: ~/project/resources
+  notifications:
+    steps:
       - slack/notify:
           event: always
           template: basic_success_1
 
-
 workflows:
-  build_and_test:
+  build:
     jobs:
       - build:
           filters:
