using pass and fail templates

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,11 @@ jobs:
       - store_artifacts:
           path: ~/project/resources
       - slack/notify:
-          event: always
+          event: pass
           template: basic_success_1
+      - slack/notify:
+                event: fail
+                template: basic_fail_1
 
 workflows:
   build_and_test:
