using pass and fail templates

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
                         "type": "plain_text",
                         "text": "View Job"
                       },
-                      "url": "https://${CIRCLE_BUILD_URL}"
+                      "url": "${CIRCLE_BUILD_URL}"
                     }
                   ]
                 }
