added sonarcloud to pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ orbs:
   # Refer to this link to setup Slack channels: https://github.com/CircleCI-Public/slack-orb/wiki/Setup
   # Setup slack app also:  https://github.com/CircleCI-Public/slack-orb/issues/207#issuecomment-731219733
   slack: circleci/slack@4.9.3
+  sonarcloud: sonarsource/sonarcloud@1.0.3
 
 jobs:
   build_and_test:
@@ -15,6 +16,8 @@ jobs:
     working_directory: ~/project
     steps:
       - checkout
+      # Note that sonar scan is triggered ONLY if automatic analysis is turned OFF
+      - sonarcloud/scan
       - run:
           name: Install Appium
           command: npm install -g appium
@@ -41,7 +44,7 @@ jobs:
       - store_artifacts:
           path: ~/project/resources
       - slack/notify:
-          event: pass
+          event: always
           custom: |
             {
               "blocks": [
@@ -49,58 +52,7 @@ jobs:
                   "type": "header",
                   "text": {
                     "type": "plain_text",
-                    "text": "Job ${CIRCLE_JOB} Succeeded. :tada:",
-                    "emoji": true
-                  }
-                },
-                {
-                  "type": "divider"
-                },
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Project*: $CIRCLE_PROJECT_REPONAME"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Branch*: $CIRCLE_BRANCH"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Author*: $CIRCLE_USERNAME"
-                    }
-                  ]
-                },
-                {
-                  "type": "divider"
-                },
-                {
-                  "type": "actions",
-                  "elements": [
-                    {
-                      "type": "button",
-                      "text": {
-                        "type": "plain_text",
-                        "text": "View Job"
-                      },
-                      "url": "${CIRCLE_BUILD_URL}"
-                    }
-                  ]
-                }
-              ]
-            }
-      - slack/notify:
-          event: fail
-          custom: |
-            {
-              "blocks": [
-                {
-                  "type": "header",
-                  "text": {
-                    "type": "plain_text",
-                    "text": "Job ${CIRCLE_JOB} Failed. :pensive:",
+                    "text": "Job ${CIRCLE_JOB} ${CCI_STATUS}.",
                     "emoji": true
                   }
                 },
