--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
       - run:
           name: SonarCloud Scan
           command: gradle build sonarqube
+      - sonarcloud/scan
       - run:
           name: Install Appium
           command: npm install -g appium
