--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       # Note that sonar scan is triggered ONLY if automatic analysis is turned OFF
       - run:
           name: SonarCloud Scan
-          command: gradle build sonarqube
+          command: gradle build sonarqube --info
       - run:
           name: Install Appium
           command: npm install -g appium
