added sonarcloud to pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,6 +99,7 @@ jobs:
   performance_testing:
     docker:
       image: justb4/jmeter:latest
+    working_directory: ~/project
     steps:
       - run:
           name: Make results directory
